Fixing Title scrollbar width

--- a/frontend/src/components/ArtifactFileItem/ArtifactFileItem.module.css
+++ b/frontend/src/components/ArtifactFileItem/ArtifactFileItem.module.css
@@ -91,6 +91,7 @@
   flex-grow: 1;
   white-space: nowrap;
   overflow-x: auto;
+  scrollbar-width: none;
   min-width: 0;
   white-space: nowrap;
 }
