--- a/frontend/src/components/ArtifactTextItem/ArtifactTextItem.module.css
+++ b/frontend/src/components/ArtifactTextItem/ArtifactTextItem.module.css
@@ -56,6 +56,7 @@
   flex-grow: 1;
   white-space: nowrap;
   overflow-x: auto;
+  scrollbar-width: none;
   min-width: 0;
   white-space: nowrap;
 }
